--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-API_ID=
-API_HASH=
-BOT_TOKEN=
-DATABASE_URL=
-MUST_JOIN=
+API_ID= "11159699"
+API_HASH= "b432bad423ae90d470d906ef26109712"
+BOT_TOKEN= "5622690128:AAFz9lVbSPVELHco8V6A8PJHcwhRQYDnQJ8"
+DATABASE_URL= "mongodb+srv://mdisk:mdisk@cluster0.0ycuxow.mongodb.net/?retryWrites=true&w=majority"
+MUST_JOIN= "netflix_indiago2"
